[project]
name = "crewai_flow_ray"
version = "0.1.0"
description = "crewai_flow_ray using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
kickoff = "crewai_flow_ray.main:kickoff"
plot = "crewai_flow_ray.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
